<resources>
    <string name="app_name">MyDetails</string>
    <string name="_31_50">31-50</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="_18_21">18-21</string>
    <string name="_22_30">22-30</string>
    <string name="name">Name :</string>
    <string name="age">Age :</string>
    <string name="delhi">Delhi</string>
    <string name="mumbai">Mumbai</string>
    <string name="kolkata">Kolkata</string>
    <string name="banglore">Banglore</string>
    <string name="select_city">Select City :</string>
    <string name="show">SHOW</string>
    <string name="user">User</string>
</resources>